--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -4,23 +4,25 @@
     <div class="users__table-header-column">Position</div>
     <div class="users__table-header-column">User</div>
     <div class="users__table-header-column">Birthday</div>
+    <div class="users__table-header-column"></div>
   </div>
   <div class="users__table-body">
-    <div *ngFor="let user of users;" class="users__table-body-row" >
+    <div *ngFor="let user of users$ | async;" class="users__table-body-row" >
       <div class="users__table-body-column">
         <div class="users__table-readonly">{{user.position}}</div>
       </div>
       <div class="users__table-body-column">
-        <div class="users__table-readonly">{{user.assignee}}</div>
+        <div class="users__table-readonly">{{user.surname}}</div>
       </div>
       <div class="users__table-body-column">
         <div class="users__table-readonly">{{user.birthday | date: 'dd-MM-yyyy'}}</div>
       </div>
-<!--      <div class="users__table-body-column">
-        <button (click)="delete(user._id)"></button>
-      </div>-->
+      <div class="users__table-body-column">
+        <button class="users__table-readonly" (click)="delete(user._id)"></button>
+      </div>
     </div>
+
   </div>
 </div>
-<router-outlet (deactivate)="actions($event)"></router-outlet>
-<!--<router-outlet></router-outlet>-->
+<!--<router-outlet (deactivate)="actions($event)"></router-outlet>-->
+<router-outlet></router-outlet>
