--- a/src/app/incidents/incident-form/incident-form.component.html
+++ b/src/app/incidents/incident-form/incident-form.component.html
@@ -27,8 +27,8 @@
           <div class="form-control">
             <label class="form-control-label">Assignee:</label>
             <select class="form-control-action" formControlName="assignee">
-              <option *ngFor="let user of users" [value]="user.assignee">
-                {{ user.assignee}}
+              <option *ngFor="let user of users" [value]="user.surname">
+                {{ user.surname}}
               </option>
             </select>
           </div>
@@ -109,7 +109,7 @@
             <div class="form-control-action-two" *ngIf="action === 2">{{formIncident.value.priority}}</div>
           </div>
 
-          <button class="transparent-button" routerLink="/events">Back</button>
+          <button class="transparent-button" routerLink="/main/events">Back</button>
           <button class="transparent-button" *ngIf="action===1" type="submit">Add event</button>
           <button class="transparent-button" *ngIf="action===2" type="submit">Edit event</button>
         </form>
