--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -6,7 +6,7 @@
 </head>
 <header>
   <div class="header">
-    <div class="header__name">PROJECTPROJECTPROJECTPROJECTPROJECTPROJECTPROJECTPROJECTPROJECTPROJECTPROJECT</div>
+    <div class="header__name">PROJECT</div>
   </div>
 </header>
 <main>
