--- a/src/app/main/main.component.less
+++ b/src/app/main/main.component.less
@@ -1,12 +1,20 @@
 .header {
-  background: black;
-  width: 70%;
-  margin: 40px auto 10px auto  ;
+  background: white;
+  height: 80px;
+  position: relative;
+  margin-bottom: 10px;
+  /*width: 70%;*/
+  /*margin: 0 auto 10px auto  ;*/
   /*padding: 20px 0 0 0;*/
-  height: 40px;
+  /*height: 40px;*/
   &__name {
+    width: 88px;
+    margin: 20px 0 0 60px;
+    /*margin-top: 37px;*/
+    background: black;
     color: white;
-    width: 200px;
+    align-items: center;
+    position: absolute;
     padding: 10px 0;
     font-size: 20px;
   }
