--- a/src/app/users/users.component.less
+++ b/src/app/users/users.component.less
@@ -15,6 +15,13 @@
       text-decoration: none;
       letter-spacing: 1px;
       transition: all 0.3s ease-out;
+      &-delete {
+        display: block;
+        border-radius: 50%;
+        background: red;
+        width: 20px;
+        height: 20px;
+      }
     }
     &-button:hover {
       color: slategray;
