--- a/src/app/main/main.component.less
+++ b/src/app/main/main.component.less
@@ -17,9 +17,16 @@
     position: absolute;
     padding: 10px 0;
     font-size: 20px;
+    @media (max-width: 500px) {
+    margin: 20px 0 0 0;
+    }
   }
 }
 .tab {
+  @media (max-width: 500px) {
+    width: 100%;
+    margin: auto;
+  }
   width: 70%;
   background: white;
   margin: auto;
