--- a/src/app/users/users.component.less
+++ b/src/app/users/users.component.less
@@ -4,6 +4,11 @@
     width: 70%;
     margin: auto;
     background: white;
+    @media (max-width: 500px) {
+      width: 100%;
+      margin: auto;
+      font-size: 12px;
+    }
     &-button {
       color: black;
       padding: 10px;
