--- a/src/app/process/process.component.less
+++ b/src/app/process/process.component.less
@@ -3,27 +3,15 @@
   &__table {
     width: 70%;
     margin: auto;
-
+    @media (max-width: 575px) {
+      width: 100%;
+      margin: auto;
+    }
 
     &-block {
       width: 100%;
       background-size: contain;
     }
 
-    &-header {
-      display: flex;
-      flex-wrap: nowrap;
-
-
-      &-column {
-        flex: 0 1 calc((100vw - 40px) / 4);
-        padding: 6px;
-
-        &:first-child {
-          flex: 40px;
-        }
-
-      }
-    }
   }
 }
