--- a/src/app/component/login/login.component.html
+++ b/src/app/component/login/login.component.html
@@ -1,4 +1,8 @@
-<div class="welcome">
+<div class="login visible">
+  <div class="login__dialog">
+    <div class="login__content">
+      <div class="login__body">
+  <div class="welcome">
   <h2>Welcome back</h2>
   <form class="login-form" [formGroup]="loginForm" (ngSubmit)="submitForm()" novalidate>
     <div class="form-input">
@@ -15,5 +19,9 @@
     </div>
     <button class="transparent-button" type="submit"> LogIn </button>
   </form>
+</div>
+      </div>
+    </div>
+  </div>
 </div>
 
