--- a/src/app/component/not-found/not-found.component.html
+++ b/src/app/component/not-found/not-found.component.html
@@ -1,1 +1,3 @@
-<p>Error 404</p>
+<div class="not_found">
+  <img class="not_found-img" src="../../assets/images/404-not-found-site.gif" alt="notFound">
+</div>
