--- a/src/app/component/login/login.component.less
+++ b/src/app/component/login/login.component.less
@@ -1,3 +1,4 @@
+@import "./../../../styles/variables";
 .login {
   position: fixed;
   top: 0;
@@ -25,7 +26,7 @@
     position: relative;
     display: flex;
     flex-direction: column;
-    background-color: #fff;
+    background-color: @white;
     background-clip: padding-box;
     border: 1px solid rgba(0,0,0,.2);
     border-radius: .3rem;
@@ -49,21 +50,10 @@
 
 
 .welcome{
-/*  display: flex;
-  flex-direction: column;
-  height: 100vh;
-  align-items: center;
-  justify-content: center;*/
   h2{
     margin-bottom: 40px;
   }
   .login-form {
-/*    background-color: fade(#fff, 90%);
-    box-shadow: 0 4px 10px fade(black, 10%);
-    padding: 50px;
-    border-radius: 4px;
-    height: 300px;
-    width: 400px;*/
     &-row {
       display: flex;
       flex-direction: column;
@@ -75,36 +65,41 @@
         padding: 5px;
       }
     }
-/*    button{
-      width: 100%;
-    }*/
   }
 }
-/*form{
-  width: 60%;
-  input{
-    background-color: transparent;
-  }
-}*/
-/*.placeholder {
-  padding: 0 150px;
-}*/
+
 .transparent-button {
   display: flex;
-  /*margin: 0 2px auto;*/
   margin-top: 5px;
   margin-bottom: 5px;
   padding: 8px 40%;
   width: 100%;
-  /*max-width: 200px;*/
   background: rgba(255, 255, 255, 0.5);
   border-radius: 8px;
-  color: slategray;
+  color: @slategray;
   text-align-all: center;
   letter-spacing: 1px;
   transition: all 0.3s ease-out;
 }
 .transparent-button:hover{
-  background-color: slategray;
-  color: #fff;
+  background-color: @slategray;
+  color: @white;
+}
+.validtext {
+  visibility: visible;
+  width: 100%;
+  background-color: @hex;
+  color: @black;
+  text-align: center;
+  padding: 5px 0;
+  border-radius: 6px;
+  position: relative;
+  z-index: 1;
+  margin-bottom: 5px;
+}
+input.ng-touched.ng-invalid{
+  border:solid @hex 2px;
+}
+input.ng-touched.ng-valid{
+  border:solid @lightgray 2px;
 }
