--- a/src/app/incidents/incidents.component.html
+++ b/src/app/incidents/incidents.component.html
@@ -2,61 +2,49 @@
 <div class="events__table">
   <button class="events__table-button" (click)="addIncident()">Add event</button>
   <div class="events__table-header">
-    <div class="events__table-header-column"></div>
-    <div class="events__table-header-column">Name</div>
-    <div class="events__table-header-column">Assignee</div>
-    <div class="events__table-header-column hidden">Area</div>
-    <div class="events__table-header-column hidden">Start date</div>
-    <div class="events__table-header-column hidden">Due date</div>
-    <div class="events__table-header-column hidden">Status</div>
+    <li class="events__table-header-column"></li>
+    <li class="events__table-header-column">Name</li>
+    <li class="events__table-header-column">Assignee</li>
+    <li class="events__table-header-column hidden">Area</li>
+    <li class="events__table-header-column hidden">Start date</li>
+    <li class="events__table-header-column hidden">Due date</li>
+    <li class="events__table-header-column hidden">Status</li>
   </div>
-  <div class="events__table-body">
-    <div *ngFor="let incident of incidents$ | async;" (click)="editIncident(incident._id)"
-         class="events__table-body-row" appHover>
+
+  <div class="events__table-body-row" *ngFor="let incident of incidents$ | async;"
+       (click)="editIncident(incident._id)" appHover>
       <div class="events__table-body-column">
-        <div class="events__table-readonly" *ngIf="incident.status === 'Closed' || incident.status === 'Marriage' ">
-        <svg width="22" height="22">
-          <circle r="8" cx="11" cy="12"
-                  fill="#ff2400" stroke="#f5f5dc" stroke-width="3"/>
-        </svg>
-      </div>
-        <div class="events__table-readonly" *ngIf="incident.status === 'Additional information' || incident.status === 'Additional information received'">
+        <li *ngIf="incident.status === 'Closed' || incident.status === 'Marriage' ">
+          <svg width="22" height="22">
+            <circle r="8" cx="11" cy="12"
+                    fill="#ff2400" stroke="#f5f5dc" stroke-width="3"/>
+          </svg>
+        </li>
+        <li *ngIf="incident.status === 'Additional information' || incident.status === 'Additional information received'">
           <svg width="22" height="22">
             <circle r="8" cx="11" cy="12"
                     fill="#ffff00" stroke="#f5f5dc" stroke-width="3" />
           </svg>
-        </div>
-        <div class="events__table-readonly" *ngIf="incident.status === 'Checked' || incident.status === 'Resolved'|| incident.status === 'In operation'">
+        </li>
+        <li *ngIf="incident.status === 'Checked' || incident.status === 'Resolved'|| incident.status === 'In operation'">
           <svg width="22" height="22">
             <circle r="8" cx="11" cy="12"
                     fill="#32cd32" stroke="#f5f5dc" stroke-width="3"/>
           </svg>
-        </div>
-        <div class="events__table-readonly" *ngIf="incident.status === 'Open' || incident.status === 'Re-start'">
+        </li>
+        <li *ngIf="incident.status === 'Open' || incident.status === 'Re-start'">
           <svg width="22" height="22">
             <circle r="8" cx="11" cy="12"
                     fill="#808080" stroke="#f5f5dc" stroke-width="3"/>
           </svg>
-        </div>
+        </li>
       </div>
-      <div class="events__table-body-column">
-        <div class="events__table-readonly">{{incident.name}}</div>
-      </div>
-      <div class="events__table-body-column">
-        <div class="events__table-readonly">{{incident.assignee}}</div>
-      </div>
-      <div class="events__table-body-column hidden">
-        <div class="events__table-readonly">{{incident.area}}</div>
-      </div>
-      <div class="events__table-body-column hidden">
-        <div class="events__table-readonly">{{incident.startDate | date: 'dd-MM-yyyy'}}</div>
-      </div>
-      <div class="events__table-body-column hidden ">
-        <div class="events__table-readonly">{{incident.dueDate | date: 'dd-MM-yyyy'}}</div>
-      </div>
-      <div class="events__table-body-column hidden">
-        <div class="events__table-readonly">{{incident.status}}  </div></div>
-    </div>
+      <li class="events__table-body-column">{{incident.name}}</li>
+      <li class="events__table-body-column">{{incident.assignee}}</li>
+      <li class="events__table-body-column hidden">{{incident.area}}</li>
+      <li class="events__table-body-column hidden">{{incident.startDate | date: 'dd-MM-yyyy'}}</li>
+      <li class="events__table-body-column hidden ">{{incident.dueDate | date: 'dd-MM-yyyy'}}</li>
+      <li class="events__table-body-column hidden">{{incident.status}}</li>
   </div>
 </div>
 <router-outlet (deactivate)="actions($event)"></router-outlet>
