--- a/src/app/users/users.component.less
+++ b/src/app/users/users.component.less
@@ -1,19 +1,20 @@
+@import "./../../styles/variables";
 .users {
 
   &__table {
     width: 70%;
     margin: auto;
-    background: white;
+    background: @white;
     @media (max-width: 575px) {
       width: 100%;
       margin: auto;
       font-size: 14px;
     }
     &-button {
-      color: black;
+      color: @black;
       padding: 10px;
-      border: solid white;
-      background: white;
+      border: solid @white;
+      background: @white;
       display: inline-block;
       background: rgba(255, 255, 255, 0.2);
       text-align: center;
@@ -23,13 +24,13 @@
       &-delete {
         display: block;
         border-radius: 50%;
-        background: red;
+        background: @hex;
         width: 20px;
         height: 20px;
       }
     }
     &-button:hover {
-      color: slategray;
+      color: @slategray;
     }
     &-header {
       display: flex;
@@ -47,12 +48,12 @@
     &-body {
       &-row {
         display: flex;
-        border: 1px solid black;
+        border: 1px solid @black;
         border-bottom: none;
         flex-wrap: nowrap;
 
         &:last-child {
-          border: 1px solid black;
+          border: 1px solid @black;
         }
 
       }
