--- a/src/app/component/not-found/not-found.component.less
+++ b/src/app/component/not-found/not-found.component.less
@@ -3,7 +3,7 @@
   background: @white;
   &-img  {
     display: block;
-    margin: 2% auto;
+    margin: auto;
     width: 60%;
     @media (max-width: 575px) {
       width: 100%;
