--- a/src/app/main/main.component.less
+++ b/src/app/main/main.component.less
@@ -22,7 +22,13 @@
     margin: 20px 0 0 0;
     }
   }
+  &__lang {
+    position: absolute;
+    right: 0;
+    margin: 20px 20px 0 0;
+  }
 }
+
 .tab {
   width: 70%;
   background: @white;
