--- a/src/app/users/users-form/users-form.component.html
+++ b/src/app/users/users-form/users-form.component.html
@@ -12,7 +12,7 @@
                (ngSubmit)="submitForm()">
 
           <div class="form-control">
-            <label class="form-control-label">Login:</label>
+            <label class="form-control-label">{{ 'USERSFORM.LOGIN' | translate }}</label>
             <input class="form-control-action" formControlName="login" type="string">
             <div class="validtext"
                  *ngIf="formUser.controls['login'].invalid && formUser.controls['login'].touched">
@@ -20,7 +20,7 @@
           </div>
 
           <div class="form-control">
-            <label class="form-control-label">Password:</label>
+            <label class="form-control-label">{{ 'USERSFORM.PASSWORD' | translate }}</label>
             <input class="form-control-action" formControlName="password" type="string">
             <div class="validtext"
                  *ngIf="formUser.controls['password'].invalid && formUser.controls['password'].touched">
@@ -28,7 +28,7 @@
           </div>
 
           <div class="form-control">
-            <label class="form-control-label">Position:</label>
+            <label class="form-control-label">{{ 'USERS.POSITION' | translate }}:</label>
             <input class="form-control-action" formControlName="position" type="string">
             <div class="validtext"
                  *ngIf="formUser.controls['position'].invalid && formUser.controls['position'].touched">
@@ -36,7 +36,7 @@
           </div>
 
           <div class="form-control">
-            <label class="form-control-label">User:</label>
+            <label class="form-control-label">{{ 'USERS.USER' | translate }}:</label>
             <input class="form-control-action" formControlName="surname" type="string">
             <div class="validtext"
                  *ngIf="formUser.controls['surname'].invalid && formUser.controls['surname'].touched">
@@ -45,20 +45,20 @@
           </div>
 
           <div class="form-control">
-            <label class="form-control-label">Birthday:</label>
+            <label class="form-control-label">{{ 'USERS.BIRTHDAY' | translate }}:</label>
             <input class="form-control-action" formControlName="birthday" type="date">
             <div class="validtext"
                  *ngIf="formUser.controls['birthday'].invalid && formUser.controls['birthday'].touched">
             </div>
           </div>
           <button class="transparent-button"
-                  routerLink="/main/users">Back</button>
-          <button class="transparent-button" type="submit">Add user</button>
+                  routerLink="/main/users">{{ 'USERSFORM.BACK' | translate }}</button>
+          <button class="transparent-button" type="submit">{{ 'USERS.ADDUSER' | translate }}</button>
 
         </form>
         <ng-template #confirmTemplate>
-          <p>Do you want to delete user?</p>
-          <button class="transparent-button" (click)="delete()">Delete</button><button class="transparent-button" routerLink="/main/users">Cancel</button>
+          <p>{{ 'USERSFORM.DOYOUWANT' | translate }}</p>
+          <button class="transparent-button" (click)="delete()">{{ 'USERSFORM.DELETE' | translate }}</button><button class="transparent-button" routerLink="/main/users">{{ 'USERSFORM.CANCEL' | translate }}</button>
         </ng-template>
       </div>
     </div>
