--- a/src/app/users/users.component.less
+++ b/src/app/users/users.component.less
@@ -35,10 +35,11 @@
     &-header {
       display: flex;
       flex-wrap: nowrap;
-
+      list-style: none;
       &-column {
         flex: 0 1 calc((100vw - 40px) / 4);
         padding: 6px;
+        text-align: left;
         &:last-child {
           flex: 40px;
         }
