--- a/src/app/incidents/incidents.component.html
+++ b/src/app/incidents/incidents.component.html
@@ -1,7 +1,7 @@
 
 <div class="events__table">
   <button class="events__table-button" (click)="addIncident()">{{ 'INCIDENTS.ADDEVENT' | translate }}</button>
-  <ul class="events__table-header-column">
+  <ul class="events__table-header">
     <li class="events__table-header-column"></li>
     <li class="events__table-header-column">{{ 'INCIDENTS.NAME' | translate }}</li>
     <li class="events__table-header-column">{{ 'INCIDENTS.ASSIGNEE' | translate }}</li>
@@ -14,37 +14,37 @@
   <div class="events__table-body-row" *ngFor="let incident of incidents$ | async;"
        (click)="editIncident(incident._id)" appHover>
       <div class="events__table-body-column">
-        <li *ngIf="incident.status === 'Closed' || incident.status === 'Marriage' ">
+        <span *ngIf="incident.status === 'Closed' || incident.status === 'Marriage' ">
           <svg width="22" height="22">
             <circle r="8" cx="11" cy="12"
                     fill="#ff2400" stroke="#f5f5dc" stroke-width="3"/>
           </svg>
-        </li>
-        <li *ngIf="incident.status === 'Additional information' || incident.status === 'Additional information received'">
+        </span>
+        <span *ngIf="incident.status === 'Additional information' || incident.status === 'Additional information received'">
           <svg width="22" height="22">
             <circle r="8" cx="11" cy="12"
                     fill="#ffff00" stroke="#f5f5dc" stroke-width="3" />
           </svg>
-        </li>
-        <li *ngIf="incident.status === 'Checked' || incident.status === 'Resolved'|| incident.status === 'In operation'">
+        </span>
+        <span *ngIf="incident.status === 'Checked' || incident.status === 'Resolved'|| incident.status === 'In operation'">
           <svg width="22" height="22">
             <circle r="8" cx="11" cy="12"
                     fill="#32cd32" stroke="#f5f5dc" stroke-width="3"/>
           </svg>
-        </li>
-        <li *ngIf="incident.status === 'Open' || incident.status === 'Re-start'">
+        </span>
+        <span *ngIf="incident.status === 'Open' || incident.status === 'Re-start'">
           <svg width="22" height="22">
             <circle r="8" cx="11" cy="12"
                     fill="#808080" stroke="#f5f5dc" stroke-width="3"/>
           </svg>
-        </li>
+        </span>
       </div>
-      <li class="events__table-body-column">{{incident.name}}</li>
-      <li class="events__table-body-column">{{incident.assignee}}</li>
-      <li class="events__table-body-column hidden">{{incident.area}}</li>
-      <li class="events__table-body-column hidden">{{incident.startDate | date: 'dd-MM-yyyy'}}</li>
-      <li class="events__table-body-column hidden ">{{incident.dueDate | date: 'dd-MM-yyyy'}}</li>
-      <li class="events__table-body-column hidden">{{incident.status}}</li>
+      <span class="events__table-body-column">{{incident.name}}</span>
+      <span class="events__table-body-column">{{incident.assignee}}</span>
+      <span class="events__table-body-column hidden">{{incident.area}}</span>
+      <span class="events__table-body-column hidden">{{incident.startDate | date: 'dd-MM-yyyy'}}</span>
+      <span class="events__table-body-column hidden ">{{incident.dueDate | date: 'dd-MM-yyyy'}}</span>
+      <span class="events__table-body-column hidden">{{incident.status}}</span>
   </div>
 </div>
 <router-outlet (deactivate)="actions($event)"></router-outlet>
