--- a/src/app/users/users.component.less
+++ b/src/app/users/users.component.less
@@ -35,7 +35,8 @@
     &-header {
       display: flex;
       flex-wrap: nowrap;
-      list-style: none;
+      margin: 0;
+      padding: 0;
       &-column {
         flex: 0 1 calc((100vw - 40px) / 4);
         padding: 6px;
